objects/Room_List__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Booking__c</fullName>
        <label>Current Booking</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNo__c</fullName>
        <label>RoomNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deluxe</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Room List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Room List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>